--- a/admin-dashboard/backend/server/package.json
+++ b/admin-dashboard/backend/server/package.json
@@ -14,10 +14,11 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
-    "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sequelize": "^6.37.7"
   }
 }
