--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.555.0",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
