--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.555.0",
     "ogl": "^1.0.11",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
