Your commit message

--- a/admin-dashboard/backend/server/.env.example
+++ b/admin-dashboard/backend/server/.env.example
@@ -1,6 +1,5 @@
-DB_HOST="your-aiven-host"
+DB_HOST="your-db-host"
+DB_PORT="your-db-port"
 DB_NAME="defaultdb"
-DB_PASSWORD="your-password"
-DB_PORT="23199"
 DB_USER="avnadmin"
-JWT_SECRET="your-secret-key"
+DB_PASSWORD="your-db-password"
