fix the connect between the user login and dashboard login

--- a/admin-dashboard/backend/server/.env.example
+++ b/admin-dashboard/backend/server/.env.example
@@ -3,3 +3,5 @@ DB_PORT="your-db-port"
 DB_NAME="defaultdb"
 DB_USER="avnadmin"
 DB_PASSWORD="your-db-password"
+ADMIN_EMAIL="mazenaboelelaelfar@gmail.com"
+ADMIN_PASSWORD="Mazen198165967#"
