--- a/admin-dashboard/backend/server/.env.example
+++ b/admin-dashboard/backend/server/.env.example
@@ -1,7 +1,33 @@
-DB_HOST="your-db-host"
-DB_PORT="your-db-port"
-DB_NAME="defaultdb"
-DB_USER="avnadmin"
-DB_PASSWORD="your-db-password"
-ADMIN_EMAIL="mazenaboelelaelfar@gmail.com"
-ADMIN_PASSWORD="Mazen198165967#"
+# Environment Configuration
+
+# Database Configuration
+DB_HOST=mysql-73b2b04-mazenalfar01.h.aivencloud.com
+DB_PORT=23199
+DB_NAME=defaultdb
+DB_USER=avnadmin
+DB_PASSWORD=your_database_password_here
+
+# JWT Secret (IMPORTANT: Use a strong, random secret in production)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters_long
+
+# Admin Credentials (for initial admin user creation)
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=YourSecurePassword123!
+
+# Environment
+NODE_ENV=development
+
+# Frontend URLs (for CORS configuration)
+FRONTEND_URL=https://your-frontend-domain.com
+ADMIN_URL=https://your-admin-dashboard-domain.com
+
+# Server Port
+PORT=5000
+
+# Security Notes:
+# 1. Never commit the actual .env file to version control
+# 2. Use strong, unique passwords for production
+# 3. Generate a cryptographically secure JWT_SECRET
+# 4. Keep database credentials secure
+# 5. Update FRONTEND_URL and ADMIN_URL with your actual domains
