--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,24 @@
+# Environment variables
+.env
+.env.local
+.env.*
+**/.env
+**/.env.*
+
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
+# Dependencies
 node_modules
+**/node_modules/
+
+# Production
 dist
 dist-ssr
-*.local
+**/dist/
+**/dist-ssr/
 
 # Editor directories and files
 .vscode/*
@@ -18,8 +26,6 @@ dist-ssr
 .idea
 .DS_Store
 *.suo
-*.ntvs*
-*.njsproj
 *.sln
 *.sw?
 
@@ -27,3 +33,5 @@ dist-ssr
 *.db
 *.sqlite
 *.sqlite3
+uploads/
+**/uploads/
