--- a/admin-dashboard/backend/server/package.json
+++ b/admin-dashboard/backend/server/package.json
@@ -29,6 +29,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
+    "resend": "^6.9.1",
     "sequelize": "^6.37.7"
   }
 }
