--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.3",
     "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.6",
+    "resend": "^6.9.1",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2"
   },
