Update project: sync all changes

--- a/admin-dashboard/backend/server/.env.example
+++ b/admin-dashboard/backend/server/.env.example
@@ -25,9 +25,30 @@ ADMIN_URL=https://your-admin-dashboard-domain.com
 # Server Port
 PORT=5000
 
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
+
+# ===========================
+# RESEND EMAIL CONFIGURATION
+# ===========================
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=re_your_resend_api_key_here
+
+# Email sender address (must be verified in Resend)
+# For development, you can use: onboarding@resend.dev
+# For production, use your verified domain: noreply@yourdomain.com
+EMAIL_FROM=onboarding@resend.dev
+
+# Optional: Disable email verification for development (true/false)
+# When set to false, users will be auto-verified without needing email confirmation
+EMAIL_VERIFICATION_ENABLED=true
+
 # Security Notes:
 # 1. Never commit the actual .env file to version control
 # 2. Use strong, unique passwords for production
 # 3. Generate a cryptographically secure JWT_SECRET
 # 4. Keep database credentials secure
 # 5. Update FRONTEND_URL and ADMIN_URL with your actual domains
+# 6. Get Resend API key from https://resend.com and verify your domain
