--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ogl": "^1.0.11",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.6",
     "resend": "^6.9.1",
