--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lucide-react": "^0.555.0",
     "multer": "^2.0.2",
     "ogl": "^1.0.11",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.6",
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
