NEW version of warmtoutch

--- a/admin-dashboard/backend/server/.env.example
+++ b/admin-dashboard/backend/server/.env.example
@@ -45,6 +45,13 @@ EMAIL_FROM=onboarding@resend.dev
 # When set to false, users will be auto-verified without needing email confirmation
 EMAIL_VERIFICATION_ENABLED=true
 
+# ===========================
+# GOOGLE OAUTH CONFIGURATION
+# ===========================
+# Get your Client ID from Google Cloud Console → Credentials
+# See GOOGLE_OAUTH_SETUP.md for detailed setup instructions
+GOOGLE_CLIENT_ID=123456789-abcdefghijklmnop.apps.googleusercontent.com
+
 # Security Notes:
 # 1. Never commit the actual .env file to version control
 # 2. Use strong, unique passwords for production
