--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
@@ -18,6 +19,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.555.0",
+    "motion": "^12.31.0",
     "multer": "^2.0.2",
     "ogl": "^1.0.11",
     "react": "18.3.1",
